--- a/index.html
+++ b/index.html
@@ -2,13 +2,135 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Dan Klammer &mdash; Designer &amp; Front-end Developer from Cleveland, Ohio</title>
+        <title>Dan Klammer &mdash; Designer &amp; Developer from Cleveland, Ohio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <link rel="stylesheet" href="css/tinyset.css">
+
+       <style>
+
+            .base-font{
+                font-family: Menlo, Consolas, Monaco, monospace;
+            }
+
+            .color-white { color: #fff }
+            .color-slate { color: #282b31 }
+            .color-gray { color: #3f414e }
+            .color-blue { color: #3498db }
+
+            .bg-white { background: #fff }
+            .bg-slate { background: #282b31 }
+            .bg-gray { background: #3f414e }
+            .bg-blue { background: #3498db }
+
+
+            /* Media Queries */
+
+            @media (min-width: 40rem) {
+
+                .lg-nav {
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    width: 5rem;
+                    height: 100vh;
+                }
+
+                .lg-page {
+                    margin-left: 5rem;
+                    padding: 1rem;
+                }
+
+
+            }
+
+
+        </style>
+
+    </head>
+    <body class="base-font align-center color-gray line-height-default">
+
+    <nav class="lg-nav align-middle bg-slate">
+        <ul class="list-reset">
+            <li class="inline-block-top"><a href="#me" class="color-white">
+                <svg version="1.1" viewBox="0 0 32 32" width="3rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
+                    <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
+                </svg>
+            </a></li>
+            <li class="inline-block-top"><a href="#works" class="color-white">
+                <svg version="1.1" viewBox="0 0 32 32" width="3rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
+                    <path d="M29 17 L29 28 3 28 3 17 M2 8 L30 8 30 16 C30 16 24 20 16 20 8 20 2 16 2 16 L2 8 Z M16 22 L16 18 M20 8 C20 8 20 4 16 4 12 4 12 8 12 8"></path>
+                </svg>
+            </a></li>
+            <li class="inline-block-top"><a href="#writings" class="color-white">
+                <svg version="1.1" viewBox="0 0 32 32" width="3rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
+                    <path d="M2 4 L30 4 30 22 16 22 8 29 8 22 2 22 Z"></path>
+                </svg>
+            </a></li>
+            <li class="inline-block-top"><a href="#contact" class="color-white">
+                <svg version="1.1" viewBox="0 0 32 32" width="3rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
+                    <path d="M2 26 L30 26 30 6 2 6 Z M2 6 L16 16 30 6"></path>
+                </svg>
+            </a></li>
+
+        </ul>
+    </nav>
+
+    <div class="lg-page height-full">
+
+        <article class="height-full align-middle p1">
+            <section class="center-block" style="max-width: 32rem">
+
+                <svg version="1.1" viewBox="0 0 32 32" width="4rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true" class="color-blue">
+                    <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
+                </svg>
+
+                <h1 class="font-size-4 bold">Dan Klammer</h1>
+                <h3 class="font-size-5">Designer &amp; Developer</h3>
+
+                <h4 class="font-size-3 line-height-title py2">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
+
+                <p class="align-left">Designer first, I am extremely interested in solving problems with the best possible solution. My objective is to create transparent user experiences through optimal design and structure.</p>
+
+            </section>
+        </article>
+
+        <article class="height-full align-middle p1">
+            <section class="center-block" style="max-width: 32rem">
+
+                <svg version="1.1" viewBox="0 0 32 32" width="4rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true" class="color-blue">
+                    <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
+                </svg>
+
+                <h1 class="font-size-4 bold">Dan Klammer</h1>
+                <h3 class="font-size-5">Designer &amp; Developer</h3>
+
+                <h4 class="font-size-3 line-height-title">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
+
+                <p class="align-left">Designer first, I am extremely interested in solving problems with the best possible solution. My objective is to create transparent user experiences through optimal design and structure.</p>
+
+            </section>
+        </article>
+
+        <article class="height-full align-middle p1">
+            <section class="center-block" style="max-width: 32rem">
+
+                <svg version="1.1" viewBox="0 0 32 32" width="4rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true" class="color-blue">
+                    <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
+                </svg>
+
+                <h1 class="font-size-4 bold">Dan Klammer</h1>
+                <h3 class="font-size-5">Designer &amp; Developer</h3>
+
+                <h4 class="font-size-3 line-height-title">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
+
+                <p class="align-left">Designer first, I am extremely interested in solving problems with the best possible solution. My objective is to create transparent user experiences through optimal design and structure.</p>
+
+            </section>
+        </article>
+
+    </div>
 
     </body>
 </html>
