--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
     <body class="base-font align-center color-gray line-height-default">
 
     <nav class="lg-nav align-middle bg-slate">
-        <ul class="list-reset">
-            <li class="inline-block-top"><a href="#me" class="color-white">
-                <svg version="1.1" viewBox="0 0 32 32" width="3rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
+        <ul class="list-reset line-height-none">
+            <li class="inline-block-top p2"><a href="#me" class="color-white">
+                <svg version="1.1" viewBox="0 0 32 32" width="48" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
                     <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
                 </svg>
             </a></li>
-            <li class="inline-block-top"><a href="#works" class="color-white">
-                <svg version="1.1" viewBox="0 0 32 32" width="3rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
+            <li class="inline-block-top p2"><a href="#works" class="color-white">
+                <svg version="1.1" viewBox="0 0 32 32" width="48" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
                     <path d="M29 17 L29 28 3 28 3 17 M2 8 L30 8 30 16 C30 16 24 20 16 20 8 20 2 16 2 16 L2 8 Z M16 22 L16 18 M20 8 C20 8 20 4 16 4 12 4 12 8 12 8"></path>
                 </svg>
             </a></li>
-            <li class="inline-block-top"><a href="#writings" class="color-white">
-                <svg version="1.1" viewBox="0 0 32 32" width="3rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
+            <li class="inline-block-top p2"><a href="#writings" class="color-white">
+                <svg version="1.1" viewBox="0 0 32 32" width="48" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
                     <path d="M2 4 L30 4 30 22 16 22 8 29 8 22 2 22 Z"></path>
                 </svg>
             </a></li>
-            <li class="inline-block-top"><a href="#contact" class="color-white">
-                <svg version="1.1" viewBox="0 0 32 32" width="3rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
+            <li class="inline-block-top p2"><a href="#contact" class="color-white">
+                <svg version="1.1" viewBox="0 0 32 32" width="48" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="5%" aria-hidden="true">
                     <path d="M2 26 L30 26 30 6 2 6 Z M2 6 L16 16 30 6"></path>
                 </svg>
             </a></li>
@@ -89,7 +89,7 @@
                 <h1 class="font-size-4 bold">Dan Klammer</h1>
                 <h3 class="font-size-5">Designer &amp; Developer</h3>
 
-                <h4 class="font-size-3 line-height-title py2">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
+                <h4 class="font-size-3 line-height-title py4">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
 
                 <p class="align-left">Designer first, I am extremely interested in solving problems with the best possible solution. My objective is to create transparent user experiences through optimal design and structure.</p>
 
@@ -106,7 +106,7 @@
                 <h1 class="font-size-4 bold">Dan Klammer</h1>
                 <h3 class="font-size-5">Designer &amp; Developer</h3>
 
-                <h4 class="font-size-3 line-height-title">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
+                <h4 class="font-size-3 line-height-title py4">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
 
                 <p class="align-left">Designer first, I am extremely interested in solving problems with the best possible solution. My objective is to create transparent user experiences through optimal design and structure.</p>
 
@@ -123,7 +123,7 @@
                 <h1 class="font-size-4 bold">Dan Klammer</h1>
                 <h3 class="font-size-5">Designer &amp; Developer</h3>
 
-                <h4 class="font-size-3 line-height-title">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
+                <h4 class="font-size-3 line-height-title py4">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
 
                 <p class="align-left">Designer first, I am extremely interested in solving problems with the best possible solution. My objective is to create transparent user experiences through optimal design and structure.</p>
 
