--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             .nav--on {
                 position: relative;
-                background: #3498db url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="10"><path fill="#fff" d="M0 10 L20 10 10 0Z" /></svg>') no-repeat center bottom;
+                background: #3498db url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2220%22%20height%3D%2210%22%3E%3Cpath%20fill%3D%22%23fff%22%20d%3D%22M0%2010%20L20%2010%2010%200Z%22%20/%3E%3C/svg%3E) no-repeat center bottom;
             }
 
             /* Media Queries */
@@ -47,7 +47,7 @@
                 }
 
                 .nav--on {
-                    background: #3498db url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="20"><path fill="#fff" d="M10 0 L10 20 0 10Z" /></svg>') no-repeat right center;
+                    background: #3498db url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2210%22%20height%3D%2220%22%3E%3Cpath%20fill%3D%22%23fff%22%20d%3D%22M10%200%20L10%2020%200%2010Z%22%20/%3E%3C/svg%3E) no-repeat right center;
                 }
 
 
