Don't use rem units for SVG widths

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <article class="height-full align-middle p3">
             <section class="center-block" style="max-width: 32rem">
 
-                <svg version="1.1" viewBox="0 0 32 32" width="4rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="color-blue">
+                <svg version="1.1" viewBox="0 0 32 32" width="64" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="color-blue">
                     <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
                 </svg>
 
@@ -113,7 +113,7 @@
         <article class="height-full align-middle p3">
             <section class="center-block" style="max-width: 32rem">
 
-                <svg version="1.1" viewBox="0 0 32 32" width="4rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="color-blue">
+                <svg version="1.1" viewBox="0 0 32 32" width="64" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="color-blue">
                     <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
                 </svg>
 
@@ -130,7 +130,7 @@
         <article class="height-full align-middle p3">
             <section class="center-block" style="max-width: 32rem">
 
-                <svg version="1.1" viewBox="0 0 32 32" width="4rem" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="color-blue">
+                <svg version="1.1" viewBox="0 0 32 32" width="64" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="color-blue">
                     <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
                 </svg>
 
