--- a/index.html
+++ b/index.html
@@ -74,29 +74,33 @@
 
     <nav class="lg-nav align-middle bg-slate">
         <ul class="list-reset line-height-none width-full">
-            <li class="lg-width-100 sm-width-25 inline-block-top"><a href="#me" class="nav--on block p3 color-white" title="About">
+            <li class="lg-width-100 sm-width-25 inline-block-top"><a href="#about" class="nav--on block p3 underline-none color-white" title="About">
                 <svg version="1.1" viewBox="0 0 32 32" width="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true">
                     <title>About</title>
                     <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
                 </svg>
+                <span class="block font-size-7 uppercase tracking-wide pt1">About</span>
             </a></li><!--
-            --><li class="lg-width-100 sm-width-25 inline-block-top"><a href="#works" class="block p3 color-white" title="Works">
+            --><li class="lg-width-100 sm-width-25 inline-block-top"><a href="#work" class="block p3 underline-none dim-color-white clickable" title="Work">
                 <svg version="1.1" viewBox="0 0 32 32" width="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true">
                     <title>Work</title>
                     <path d="M29 17 L29 28 3 28 3 17 M2 8 L30 8 30 16 C30 16 24 20 16 20 8 20 2 16 2 16 L2 8 Z M16 22 L16 18 M20 8 C20 8 20 4 16 4 12 4 12 8 12 8"></path>
                 </svg>
+                <span class="block font-size-7 uppercase tracking-wide pt1">Work</span>
             </a></li><!--
-            --><li class="lg-width-100 sm-width-25 inline-block-top"><a href="#writings" class="block p3 color-white" title="Ideas">
+            --><li class="lg-width-100 sm-width-25 inline-block-top"><a href="#ideas" class="block p3 underline-none dim-color-white clickable" title="Ideas">
                 <svg version="1.1" viewBox="0 0 32 32" width="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true">
                     <title>Ideas</title>
                     <path d="M2 4 L30 4 30 22 16 22 8 29 8 22 2 22 Z"></path>
                 </svg>
+                <span class="block font-size-7 uppercase tracking-wide pt1">Ideas</span>
             </a></li><!--
-            --><li class="lg-width-100 sm-width-25 inline-block-top"><a href="#contact" class="block p3 color-white" title="Contact">
+            --><li class="lg-width-100 sm-width-25 inline-block-top"><a href="#ping" class="block p3 underline-none dim-color-white clickable" title="Ping">
                 <svg version="1.1" viewBox="0 0 32 32" width="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true">
-                    <title>Contact</title>
+                    <title>Ping</title>
                     <path d="M2 26 L30 26 30 6 2 6 Z M2 6 L16 16 30 6"></path>
                 </svg>
+                <span class="block font-size-7 uppercase tracking-wide pt1">Ping</span>
             </a></li>
 
         </ul>
@@ -104,7 +108,7 @@
 
     <div class="lg-page height-full">
 
-        <article class="height-full align-middle p3">
+        <article id="about" class="height-full align-middle p3">
             <section class="center-block" style="max-width: 32rem">
 
                 <svg version="1.1" viewBox="0 0 32 32" width="64" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="color-blue">
@@ -121,34 +125,42 @@
             </section>
         </article>
 
-        <article class="height-full align-middle p3">
+        <article id="work" class="height-full align-middle p3">
             <section class="center-block" style="max-width: 32rem">
 
                 <svg version="1.1" viewBox="0 0 32 32" width="64" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="color-blue">
-                    <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
+                    <path d="M29 17 L29 28 3 28 3 17 M2 8 L30 8 30 16 C30 16 24 20 16 20 8 20 2 16 2 16 L2 8 Z M16 22 L16 18 M20 8 C20 8 20 4 16 4 12 4 12 8 12 8"></path>
                 </svg>
 
-                <h1 class="font-size-4 bold">Dan Klammer</h1>
-                <h3 class="font-size-5">Designer &amp; Developer</h3>
-
-                <h4 class="font-size-3 line-height-title py4">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
+                <h3 class="font-size-5">Work</h3>
 
                 <p class="align-left">Designer first, I am extremely interested in solving problems with the best possible solution. My objective is to create transparent user experiences through optimal design and structure.</p>
 
             </section>
         </article>
 
-        <article class="height-full align-middle p3">
+        <article id="ideas" class="height-full align-middle p3">
             <section class="center-block" style="max-width: 32rem">
 
                 <svg version="1.1" viewBox="0 0 32 32" width="64" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="color-blue">
-                    <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
+                    <path d="M2 4 L30 4 30 22 16 22 8 29 8 22 2 22 Z"></path>
                 </svg>
 
-                <h1 class="font-size-4 bold">Dan Klammer</h1>
-                <h3 class="font-size-5">Designer &amp; Developer</h3>
+                <h3 class="font-size-5">Ideas</h3>
 
-                <h4 class="font-size-3 line-height-title py4">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
+                <p class="align-left">Designer first, I am extremely interested in solving problems with the best possible solution. My objective is to create transparent user experiences through optimal design and structure.</p>
+
+            </section>
+        </article>
+
+        <article id="ping" class="height-full align-middle p3">
+            <section class="center-block" style="max-width: 32rem">
+
+                <svg version="1.1" viewBox="0 0 32 32" width="64" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="color-blue">
+                    <path d="M2 26 L30 26 30 6 2 6 Z M2 6 L16 16 30 6"></path>
+                </svg>
+
+                <h3 class="font-size-5">Ping</h3>
 
                 <p class="align-left">Designer first, I am extremely interested in solving problems with the best possible solution. My objective is to create transparent user experiences through optimal design and structure.</p>
 
