--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="lg-page height-full">
 
         <article id="about" class="height-full align-middle p3">
-            <section class="center-block" style="max-width: 32rem">
+            <section class="center-block" style="max-width: 34rem">
 
                 <svg version="1.1" viewBox="0 0 32 32" width="64" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="color-blue">
                     <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
@@ -129,7 +129,7 @@
                 <h1 class="font-size-4 bold">Dan Klammer</h1>
                 <h3 class="font-size-5">Designer &amp; Developer</h3>
 
-                <h4 class="font-size-3 line-height-title py4">I&rsquo;m passionate about creating digital products&mdash;obsessed with simplicity &amp; performance.</h4>
+                <h4 class="font-size-3 line-height-title py4">I&rsquo;m passionate about creating<br class="sm-hide" /> digital products&mdash;obsessed with simplicity &amp; performance.</h4>
 
                 <p class="align-left">Designer first, I am extremely interested in solving problems with the best possible solution. My objective is to create transparent user experiences through optimal design and structure.</p>
 
