--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@ layout: default
   {% include nav.html %}
   {% include header.html %}
 
-  <div class="lg-article lg-height-full lg-align-middle p3">
-    <section class="center-block" style="max-width: 34rem" >
+  <div class="lg-work lg-height-full lg-align-middle p2">
+    <section class="width-full center-block">
 
-      <h1 class="font-size-2">Work</h1>
+        {% for post in site.categories.work %}<!--
+        --><div class="xlg-width-33 lg-width-50 sm-width-100 inline-block p2">
+          <a class="center-block align-center color-white underline-none line-height-none text-shadow-light box-shadow-light br3 overflow-hidden {% if post.hero-image == "" or post.hero-image == nil %}align-middle{% endif %}" style="background: {{ post.color }};" href="{{ post.url | prepend: site.baseurl }}" >
 
-      <p>Cool story bro</p>
+            <div class="inline-block-middle px3 pt4 pb3">
+                <h2 class="font-size-1">{{ post.title }}</h2>
+                <time class="block font-size-6 line-height-none tracking-wide opacity-8 py2">{{ post.year }}</time>
+                <span class="font-size-5 line-height tracking-slight font-weight-5">{{ post.tagline }}</span>
+            </div>
+
+            {% if post.hero-image %}
+            <img src="{{ post.hero-image }}" class="inline-block-middle">
+            {% endif %}
+
+          </a>
+        </div><!--
+        -->{% endfor %}
 
     </section>
 
