Slight re-org. No reason to have a /work/ subdirectory.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
             <div class="center-block px3 pt4 pb3">
                 <h2 class="font-size-1">{{ post.title }}</h2>
                 <time class="block font-size-6 line-height-none tracking-wide opacity-8 py2">{{ post.year }}</time>
-                <span class="font-size-5 line-height tracking-slight font-weight-5">{{ post.tagline }}</span>
+                <span class="font-size-5 line-height-title tracking-slight font-weight-5">{{ post.tagline }}</span>
             </div>
 
             {% if post.hero-image %}
