Use localStorage to help UX depending on what page they're coming from

--- a/index.html
+++ b/index.html
@@ -33,3 +33,12 @@ layout: default
   </div>
 
 </div>
+
+
+<script>
+
+  console.log("from = " + localStorage.getItem("via"));
+  localStorage.setItem("via", "home");
+  console.log("on = " + localStorage.getItem("via"));
+  
+</script>
