Use sessionStorage instead of localStorage

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ layout: default
 
 <script>
 
-  console.log("from = " + localStorage.getItem("via"));
-  localStorage.setItem("via", "home");
-  console.log("on = " + localStorage.getItem("via"));
+  console.log("from = " + sessionStorage.getItem("via"));
+  sessionStorage.setItem("via", "home");
+  console.log("on = " + sessionStorage.getItem("via"));
   
 </script>
