Remove selection on cover images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
             </div>
 
             {% if post.cover-image %}
-            <img src="{{ post.cover-image }}" width="450" height="400" class="block width-full">
+            <img src="{{ post.cover-image }}" width="450" height="400" class="block width-full no-select">
             {% endif %}
 
           </a>
