--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 layout: default
 ---
 
-<div class="lg-page lg-height-full">
+<div class="site-home lg-page lg-height-full">
 
   {% include nav.html %}
   {% include header.html %}
 
-  <div class="lg-work p2">
-    <section class="width-full center-block">
+  <div class="p2">
+    <section class="width-full center-block align-center pb3">
 
         {% for post in site.categories.work %}<!--
         --><div class="lg-width-50 sm-width-100 inline-block p2">
-          <a class="center-block align-center color-white underline-none line-height-none text-shadow-light box-shadow-light br3 overflow-hidden" style="background: rgb({{ post.color }});" href="{{ post.url | prepend: site.baseurl }}" >
+          <a class="center-block color-white underline-none line-height-none text-shadow-light box-shadow-light br3 overflow-hidden" style="background: rgb({{ post.color }});" href="{{ post.url | prepend: site.baseurl }}" >
 
             <div class="center-block px3 pt4 pb3">
                 <h2 class="font-size-1">{{ post.title }}</h2>
@@ -27,6 +27,8 @@ layout: default
           </a>
         </div><!--
         -->{% endfor %}
+
+        {% include copyright.html %}
 
     </section>
 
