Make the behind the scenes bg-slate

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="site-home lg-page lg-height-full">
+<div class="site-home lg-page lg-height-full bg-white">
 
   {% include nav.html %}
   {% include header.html %}
