Re-org and cleanup (particularly includes)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% if site.splash == true %}
-  {% include splash.html %}
+  {% include layout/splash.html %}
 {% else %}
-  {% include homepage.html %}
+  {% include layout/homepage.html %}
 {% endif %}
