More SEO: Added descriptions to main pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+description: Passionate about creating digital products—obsessed with simplicity &amp; experience.
 ---
 
 {% if site.splash == true %}
