--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 description: Passionate about creating digital products—obsessed with simplicity &amp; experience.
 ---
 
-{% if site.splash == true %}
+{% if site.show_splash == true %}
   {% include layout/splash.html %}
 {% else %}
   {% include layout/homepage.html %}
