Added Sitemap properties

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 description: Passionate about creating digital products—obsessed with simplicity &amp; experience.
+sitemap:
+  lastmod: 2016-08-08
+  priority: 1
+  changefreq: 'monthly'
 ---
 
 {% if site.show_splash == true %}
