--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: Passionate about creating digital products—obsessed with simplicity &amp; experience.
+description: Pushing to create good design, simple apps, faster websites, and the best user experiences.
 sitemap:
   lastmod: 2016-08-08
   priority: 1
